--- a/project/cashflow.html
+++ b/project/cashflow.html
@@ -38,7 +38,7 @@
             <br>
             <h2 class="pagesubtitle">Creating A Budget Plan</h2>
 
-            <div id="pagecontainer">
+            <div class="pagecontainer">
                 <div>
                     <img src="images/income.jpg" alt="calulator ontop of money" class="pageimgleft">
                 </div>
@@ -115,7 +115,7 @@
 
         <section>
             <h2 class="pagesubtitle">Debt</h2>
-            <div id="pagecontainer">
+            <div class="pagecontainer">
                 <div>
                     <img src="images/debt.jpg" alt="stressed man holding papers" class="pageimgleft">
                 </div>
