--- a/project/investments.html
+++ b/project/investments.html
@@ -34,7 +34,7 @@
         <section>
             <h2 class="pagesubtitle">Stocks</h2>
 
-            <div id="pagecontainer">
+            <div class="pagecontainer">
                 <div>
                     <img src="images/stockgraph.jpg" alt="Tesla stock graph" class="pageimgleft">
                 </div>
@@ -51,7 +51,7 @@
 
             <div class="clear"></div>
 
-            <div id="pagecontainer2">
+            <div class="pagecontainer2">
                 <h3 class="pageptitle2">| How do people earn money from the stock market?</h3>
                 <p>The stock market is constantly fluctuating. How much a company’s share is worth can change drastically
                     from $10 to $50 in a day, or it can only change with a 10¢ difference. The value of the company’s shares
@@ -66,7 +66,7 @@
             </div>
 
 
-                <div id="pagecontainer">
+                <div class="pagecontainer">
                     <div>
                         <img src="images/buysell.jpg" alt="Cartoon man at buy and sell crossroads" class="pageimgright">
                     </div>
@@ -95,7 +95,7 @@
     
             <div class="clear"></div>
 
-            <div id="pagecontainer2">
+            <div class="pagecontainer2">
                 <h3 class="pageptitle2">| Why choose long-term investing over short-term?</h3>
                 <p>This debate can be very convincing to the average person when you look at market summaries. If you were
                     to search up a market summary of a company’s stock, you’re usually presented with a huge value number,
@@ -114,7 +114,7 @@
                 </p>
             </div>
 
-            <div id="pagecontainer2">
+            <div class="pagecontainer2">
                 <h3 class="pageptitle2">| How do I get started?</h3>
                 <p>There are a handful of apps that make the stock market easier to understand for college students. I recommend setting up your trading account with apps like WeBull, Robinhood, or Fidelity.
                     <br><br></p>
@@ -129,7 +129,7 @@
         <section>
             <h2 class="pagesubtitle">Index Funds</h2>
 
-            <div id="pagecontainer">
+            <div class="pagecontainer">
                 <div>
                     <img src="images/indexfund.jpg" alt="Chart of best index funds" class="pageimgleft">
                 </div>
