--- a/project/retirement.html
+++ b/project/retirement.html
@@ -34,7 +34,7 @@
         <section>
 
             <h2 class="pagesubtitle">401(k)</h2>
-            <div id="pagecontainer">
+            <div class="pagecontainer">
                 <div>
                     <img src="images/401k.jpg" alt="Piggy bank in front of 401k chalkboard" class="pageimgleft">
                 </div>
@@ -65,7 +65,7 @@
         <section>
 
             <h2 class="pagesubtitle">Social Security</h2>
-            <div id="pagecontainer">
+            <div class="pagecontainer">
                 <div>
                     <img src="images/socialsecurity.jpg" alt="Coins surrounding social security card" class="pageimgright">
                 </div>
@@ -99,7 +99,7 @@
         <section>
 
             <h2 class="pagesubtitle">Roth/Traditional IRA</h2>
-            <div id="pagecontainer">
+            <div class="pagecontainer">
                 <div>
                     <img src="images/ira.jpg" alt="Green IRA with lock, person, and stacked money icons" class="pageimgleft">
                 </div>
