--- a/project/taxes.html
+++ b/project/taxes.html
@@ -31,7 +31,7 @@
     </header>
 
     <main>
-        <section id="pagecontainer2">
+        <section class="pagecontainer2">
             <h2 class="pagesubtitle">Types of Taxes</h2><br>
             <img src="images/tax.jpg" alt="Papers with added numbers and tax incentive and a pen" class="budgetimg">
             <p>Taxes. No one wants them, but they’ll always exist. As college students, there are generally four taxes
@@ -70,7 +70,7 @@
 
         </section>
 
-        <section id="pagecontainer2">
+        <section class="pagecontainer2">
             <h2 class="pagesubtitle">Tax Brackets</h2>
             <br>
             <img src="images/taxbrackets.jpg" alt="Chart of Tax Brackets for 2021 tax submission" class="budgetimg">
@@ -79,7 +79,7 @@
         <section>
             <h2 class="pagesubtitle">Tax Credits & Deductions</h2>
 
-            <div id="pagecontainer">
+            <div class="pagecontainer">
                 <div>
                     <img src="images/americanoppcredit.jpg" alt="American Opportunity Credit AGI limits" class="pageimgleft">
                 </div>
@@ -93,7 +93,7 @@
 
             <div class="clear"></div>
 
-            <div id="pagecontainer">
+            <div class="pagecontainer">
                 <div>
                     <img src="images/tuitionfeededuction.jpg" alt="Tuition Fee Deduction AGI Limits" class="pageimgright">
                 </div>
