--- a/project/cashflow.html
+++ b/project/cashflow.html
@@ -55,7 +55,7 @@
 
             <div class="clear"></div>
 
-            <div id="pagecontainer2">
+            <div class="pagecontainer2">
             <h3 class="pageptitle2">| Savings & Spending</h3>
             <p>After calculating how much you earn, determine the timeframe of your budget. You can have a weekly
                 budget, bi-weekly budget or a monthly budget. Choosing which budget is right for you usually depends on
