--- a/project/index.html
+++ b/project/index.html
@@ -7,6 +7,7 @@
     <title>College Cents Home</title>
 
     <link rel="stylesheet" href="styles.css">
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 
 </head>
 
