--- a/project/investments.html
+++ b/project/investments.html
@@ -7,6 +7,7 @@
     <title>College Cents Investments</title>
 
     <link rel="stylesheet" href="styles.css">
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 </head>
 
 <body>
