--- a/project/index.html
+++ b/project/index.html
@@ -54,27 +54,19 @@
         <div class="iconcontainer">
 
             <div class="iconcard">
-                <img src="images/cashicon.png" alt="Purple Wallet Outline">
-                <br>
-                <p class="icontext">Cash Flow</p>
+                <p class="icontext"><img src="images/cashicon.png" alt="Purple Wallet Outline"><br><br>Cash Flow</p>
             </div>
 
             <div class="iconcard">
-                <img src="images/investicon.png" alt="Purple Positive Graph Outline">
-                <br>
-                <p class="icontext">Investments</p>
+                <p class="icontext"><img src="images/investicon.png" alt="Purple Positive Graph Outline"><br><br>Investments</p>
             </div>
 
             <div class="iconcard">
-                <img src="images/taxicon.png" alt="Purple Scales Outline">
-                <br>
-                <p class="icontext">Taxes</p>
+                <p class="icontext"><img src="images/taxicon.png" alt="Purple Scales Outline"><br><br>Taxes</p>
             </div>
 
             <div class="iconcard">
-                <img src="images/retireicon.png" alt="Purple Safe Outline">
-                <br>
-                <p class="icontext">Retirement</p>
+                <p class="icontext"><img src="images/retireicon.png" alt="Purple Safe Outline"><br><br>Retirement</p>
             </div>
 
             <br>
