--- a/project/cashflow.html
+++ b/project/cashflow.html
@@ -42,12 +42,12 @@
             <h2 class="pagesubtitle">Creating A Budget Plan</h2>
 
             <div class="pagecontainer">
-                <div>
-                    <img src="images/income.jpg" alt="calulator ontop of money" class="pageimgleft">
+                <div class="pageimgl">
+                    <img src="images/income.jpg" alt="calulator ontop of money" class="pageimg">
                 </div>
 
-                <div>
-                    <h3 class="pageptitle">Determine Your Income |</h3>
+                <div class="pagecontent">
+                    <h3 class="pageptitler">Determine Your Income |</h3>
                     <p class="pagetext"> Your income is typically defined as the money you receive, especially on a regular basis. Sources
                         of income during college varies from student to student. It could be from a part-time job to an
                         allowance to a small business or all of the above. No matter what your income is, the first step
@@ -56,23 +56,23 @@
             </div>
             <br>
 
-            <div class="clear"></div>
-
-            <div class="pagecontainer2">
-            <h3 class="pageptitle2">| Savings & Spending</h3>
-            <p>After calculating how much you earn, determine the timeframe of your budget. You can have a weekly
+            <div class="pagecentercont">
+            <h3 class="pageptitlel">| Savings & Spending</h3>
+            <p class="pagecentertext">After calculating how much you earn, determine the timeframe of your budget. You can have a weekly
                 budget, bi-weekly budget or a monthly budget. Choosing which budget is right for you usually depends on
                 when you get paid and how much self-control you have. Other factors can also affect what is ideal for
                 you such as when you buy groceries, when you pay for subscriptions, when you pay your phone bill and
                 etc. If you don’t know where to start, a monthly budget is the most common.</p>
-
+            
+            <div class="saveimg">
             <img src="images/budgetbreakdown.jpg" alt="pie chart of a budget breakdown" class="budgetimg">
+            </div>
 
-            <p>The first things to allocate in your budget are essential expenses. Don’t convince yourself that a weekly
+            <p class="pagecentertext">The first things to allocate in your budget are essential expenses. Don’t convince yourself that a weekly
                 shopping spree or dinner with friends are essential expenses. This category is for housing, utilities,
                 phone bills, grocery spending, and transportation.</p>
 
-            <p>Once you subtract all your essential costs, what’s left of your income is divided for savings and
+            <p class="pagecentertext">Once you subtract all your essential costs, what’s left of your income is divided for savings and
                 desires. How this is divided all depends on your dedication. The obvious recommendation is to save all
                 of your leftover money, however humans aren’t perfect, especially college students with newfound
                 independence. Here are some methods you can choose from:</p>
@@ -103,7 +103,7 @@
                 </div>
             </div>
             <br>
-            <p>There are pros and cons to each method, and these aren’t the only ones that exist. You can decide your
+            <p class="pagecentertext">There are pros and cons to each method, and these aren’t the only ones that exist. You can decide your
                 own percentage cuts best fit to your comfort zone. However, these decisions need to be thought over past
                 instant gratification. Everyone would love to blow their paycheck on Amazon impulses, but when it comes
                 to the larger purchases later in your life like a new car or your first home, saving early will make the
@@ -119,11 +119,12 @@
         <section>
             <h2 class="pagesubtitle">Debt</h2>
             <div class="pagecontainer">
-                <div>
-                    <img src="images/debt.jpg" alt="stressed man holding papers" class="pageimgleft">
+
+                <div class="pageimgl">
+                    <img src="images/debt.jpg" alt="stressed man holding papers" class="pageimg">
                 </div>
 
-                <div>
+                <div class="pagecontentlong">
                     <p class="pagetext">
                         Unless you received a full scholarship to your college, odds are you had to take out student
                         loans. One of your biggest priorities when it comes to finance should be to get rid of your debt
