--- a/project/taxes.html
+++ b/project/taxes.html
@@ -34,86 +34,92 @@
     </header>
 
     <main>
-        <section class="pagecontainer2">
+        <section>
+            <div class="pagecentercont">
             <h2 class="pagesubtitle">Types of Taxes</h2><br>
+
+            <div class="saveimg">
             <img src="images/tax.jpg" alt="Papers with added numbers and tax incentive and a pen" class="budgetimg">
-            <p>Taxes. No one wants them, but they’ll always exist. As college students, there are generally four taxes
+            </div>
+            
+            <p class="pagecentertext">Taxes. No one wants them, but they’ll always exist. As college students, there are generally four taxes
                 you’ll come across before you graduate.
             </p>
 
-            <h3 class="pageptitle2">| Consumption Tax</h3>
-            <p>This tax is something we’re all too familiar with the moment we started paying for our own things. The
+            <h3 class="pageptitlel">| Consumption Tax</h3>
+            <p class="pagecentertext">This tax is something we’re all too familiar with the moment we started paying for our own things. The
                 consumption tax we come across often are sales tax which is a percentage of the price of what you’re
                 purchasing in addition to its original cost. It’s something we’re used to, but need to keep in mind
                 especially when making large purchases that add up to way more than what it’s advertised.</p>
 
-            <h3 class="pageptitle2">| Payroll Tax</h3>
-            <p>This tax is a percentage of an employee’s pay that is paid to the government by their employer on the
+            <h3 class="pageptitlel">| Payroll Tax</h3>
+            <p class="pagecentertext">This tax is a percentage of an employee’s pay that is paid to the government by their employer on the
                 employee’s behalf. This tax is dedicated to fund government programs such as Medicare and Social
                 Security in which you reap the benefits later in your life.</p>
 
-            <h3 class="pageptitle2">| Federal Income Tax</h3>
-            <p>This tax is a percentage of an employee’s pay that is determined by their tax bracket or how much they
+            <h3 class="pageptitlel">| Federal Income Tax</h3>
+            <p class="pagecentertext">This tax is a percentage of an employee’s pay that is determined by their tax bracket or how much they
                 earned in the U.S. Income taxes are a source of revenue for governments. Although most people would like
                 to keep their entire income, this tax benefits more than just an individual as its used to fund public
                 services, pay government obligation, and provide goods for citizens.</p>
 
-            <h3 class="pageptitle2">| State Income Tax</h3>
-            <p>This tax is determined by your state of residence and some states have no state income tax at all (Alask,
+            <h3 class="pageptitlel">| State Income Tax</h3>
+            <p class="pagecentertext">This tax is determined by your state of residence and some states have no state income tax at all (Alask,
                 Florida, Nevada, South Dakota, Texas, Washington, and Wyoming.) Like the Federal Income Tax, this money
                 is used to fund services like transportation, corrections, health benefits for public employees,
                 environmental projects, state police, etc.</p>
 
-            <h3 class="pageptitle2">| Bonus For Investors: Capital Gains Tax</h3>
-            <p>If you decide to be a student investor, you also need to realize there are Capital Gains taxes you need
+            <h3 class="pageptitlel">| Bonus For Investors: Capital Gains Tax</h3>
+            <p class="pagecentertext">If you decide to be a student investor, you also need to realize there are Capital Gains taxes you need
                 to consider and file. Capital Gains taxes are taxes on the profits you earn from your stock investments.
                 The tax rate on your capital gains depends on how long you held onto your shares before selling. Holding
                 for more than one year result in 0%, 15% or 20% taxes, but holding for less than a year usually
                 correspond to ordinary income tax rates.</p>
-
+            </div>
         </section>
 
-        <section class="pagecontainer2">
+        <section>
             <h2 class="pagesubtitle">Tax Brackets</h2>
             <br>
+            <div class="saveimg">
             <img src="images/taxbrackets.jpg" alt="Chart of Tax Brackets for 2021 tax submission" class="budgetimg">
+            </div>
         </section>
 
         <section>
             <h2 class="pagesubtitle">Tax Credits & Deductions</h2>
 
-            <div class="pagecontainer">
-                <div>
-                    <img src="images/americanoppcredit.jpg" alt="American Opportunity Credit AGI limits" class="pageimgleft">
+            <div class="pagecontainercredit">
+                <div class="pageimgl">
+                    <img src="images/americanoppcredit.jpg" alt="American Opportunity Credit AGI limits" class="pageimgtax">
                 </div>
-                <div>
-                    <h3 class="pageptitle3">American Opportunity Credit |</h3>
+                <div class="pagecontentcredit">
+                    <h3 class="pageptitler">American Opportunity Credit |</h3>
                     <p class="pagetext">Claim a credit of up to $2,500 for the first four years of college for tuition and fees, books,
                         supplies, and equipment. It can be claimed for each student in the family, but there are
                         adjusted gross income limits that apply.</p>
                 </div>
             </div>
 
-            <div class="clear"></div>
+            <div class="pagecontainercredit">
 
-            <div class="pagecontainer">
-                <div>
-                    <img src="images/tuitionfeededuction.jpg" alt="Tuition Fee Deduction AGI Limits" class="pageimgright">
-                </div>
-
-                <div>
-                    <h3 class="pageptitle4">| Tuition and Fees Deduction</h3>
-                    <p class="pagetext2">Students who paid for tuition, books, supplies, etc. for a degree program they were enrolled in
+                <div class="pagecontentcredit">
+                    <h3 class="pageptitletax">| Tuition and Fees Deduction</h3>
+                    <p class="pagetext">Students who paid for tuition, books, supplies, etc. for a degree program they were enrolled in
                         2020 could be eligible to reduce taxable income by up to $4,000.
                         This can’t be claimed with any other education-related federal tax credits.
                         And once again there are adjusted gross income limits that apply.
                     </p>
                 </div>
+
+                <div class="pageimgl">
+                    <img src="images/tuitionfeededuction.jpg" alt="Tuition Fee Deduction AGI Limits" class="pageimgtax">
+                </div>
+
             </div>
 
         </section>
 
-        <div class="clear"></div>
     </main>
 
     <footer>
