--- a/project/index.html
+++ b/project/index.html
@@ -17,6 +17,8 @@
                 document.getElementById('cashicon').style.display = 'none';
             }
 
+        /* https://www.webdevelopersnotes.com/ for list javascript functions */
+
         function CashTip () {
 
             document.getElementById('cashtipcont').style.display = 'block';
