--- a/project/cashflow.html
+++ b/project/cashflow.html
@@ -118,7 +118,7 @@
                 </div>
 
                 <div class="savemethod">
-                    <p id="method3" class="savemethodtitle2" onclick="MethodsOff(); Methods3On();">20/80</span></p>
+                    <p id="method3" class="savemethodtitle2" onclick="MethodsOff(); Methods3On();">20/80</p>
                        <p id="methodtext3" class="savemethodtext"> This method is like the 50/50 method rule except it’s more meant for those who want to use their
                         wealth for present experience and indulgence thus 80% of what’s left over can be spent on what
                         you want while 20% is in savings.
